Changed Word Length to 9 bits. Fixed startup

--- a/STM32DBUSTest.ioc
+++ b/STM32DBUSTest.ioc
@@ -150,9 +150,10 @@ RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
 USART1.BaudRate=100000
-USART1.IPParameters=VirtualMode,BaudRate,Parity
+USART1.IPParameters=VirtualMode,BaudRate,Parity,WordLength
 USART1.Parity=PARITY_EVEN
 USART1.VirtualMode=VM_ASYNC
+USART1.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
